edit styles file

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/reset.css" />
     <title>Frontend Mentor | Rock, Paper, Scissors</title>
   </head>
   <body>
